--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,23 @@
 /* CSS customization */
 
+body {
+    margin:auto; 
+    height: auto; 
+}
+
+#timer{
+    text-align: center; 
+    margin: 20px;
+    font-size:18px; 
+    color:blue; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#questionBlock{
+    color:green; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container{
+    background-color: lightgoldenrodyellow; 
+}
